test/libsolidity/syntaxTests/constructor/old_style_constructor_not_allowed.sol
contract A { function A() public {} }
// ----
// SyntaxError: (13-35): Old style constructors not allowed.
// Warning: (13-35): This declaration shadows an existing declaration.
